2005-11-16  Pascal Terjan  <pterjan@linuxfr.org>

	* lib/alexandria/book_providers/proxis.rb:

	Support publish year for Proxis.

2005-11-16  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	- Show tooltips for combo toolbar items ;
	- Filter the books views directly when the filter entry has been modified, 
	  not upon validation.

	* data/alexandria/glade/book_properties_dialog.glade,
	  data/alexandria/glade/preferences_dialog.glade,
	  lib/alexandria/book.rb,
	  lib/alexandria/import_library.rb,
	  lib/alexandria/utils.rb,
	  lib/alexandria/book_providers/amadeus.rb,
	  lib/alexandria/book_providers/amazon.rb,
	  lib/alexandria/book_providers/bn.rb,
	  lib/alexandria/book_providers/ibs_it.rb,
	  lib/alexandria/book_providers/mcu.rb,
	  lib/alexandria/book_providers/proxis.rb,
	  lib/alexandria/book_providers/renaud.rb,
	  lib/alexandria/book_providers/z3950.rb,
	  lib/alexandria/ui/book_properties_dialog.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb,
	  lib/alexandria/ui/preferences_dialog.rb,
	  schemas/alexandria.schemas:

	Introduced publish year notion for books.

2005-11-14  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers.rb,
	  lib/alexandria/ui/preferences_dialog.rb:

	Make Ruby/ZOOM dependency optional, and hide the advanced check box in the
	providers preferences window when there is no abstract provider.

2005-11-10  Laurent Sansonetti  <lrz@gnome.org>

	* TODO:

	Removed done points, added undo/redo.

	* lib/alexandria/ui/main_app.rb:

	Added actions tooltips.  Combo boxes in the toolbar do not have tooltips
	yet.

2005-11-09  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/renaud.rb (#url):

	Make sure we return nil if the book ISBN is not set.

2005-11-08  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:
